61-yaingress.yaml
# ÄNDRA mooo.chickenkiller.com samt hockey11111.chickenkiller.com till dina namn

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: yatest
  name: prodingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "nataliasbackend.crabdance.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gamebackend-service
                port:
                  number: 80
    - host: "nataliasfrontend.crabdance.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gamefrontend-service
                port:
                  number: 80
